src/qt/pivx/res/css/style_dark.css
/* ... */
QPushButton[cssClass="btn-welcome-next"] {
    background: url("://ic-arrow-white-right");
    background-repeat:no-repeat;
    background-position:center;
    border:  0;
    background-color: #5c4b7d;
    color: #5c4b7d;
}


QPushButton[cssClass="btn-welcome-number-check"] {
    border:  1px solid #5c4b7d;
    background-color:transparent;
    font-size:14px;
    border-radius:11px;
    color: #807b8a;
}

QPushButton[cssClass="btn-welcome-number-check"]:checked {
    border:  1px solid #b088ff;
    background-color:#b088ff;
    font-size:14px;
    border-radius:11px;
    color: #5c4b7d;
}

QPushButton[cssClass="btn-welcome-name-check"] {
    background-color: transparent;
    border:none;
    font-size:20px;
    color: #807b8a;
}

QPushButton[cssClass="btn-welcome-name-check"]:checked {
    background-color:transparent;
    border:none;
    font-size:20px;
    color: #b088ff;
}


/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH        Tooltip
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/


QToolTip { color: white; background-color: #b088ff; border: none;padding:10px; border-radius:2px;}


/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH        ROW LIST
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

*[cssClass="container-list-menu"]{
    background-color:white;
    border-radius:2px;
    padding:15px;
    border: 1px solid #bababa;
}

*[cssClass="btn-list-menu"]{
    border: 0;
    background-color:#FFFFFF;
    font-size:16px;
    color: #707070;
}

*[cssClass="btn-list-menu"]:hover{
    color: #5c4b7d;
}



/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH        EMPTY LIST
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

*[cssClass="text-empty"]{
    color: #B3FFFFFF;
    font-size: 18px;
}


*[cssClass="img-empty-master"] {
    qproperty-icon: url("://img-empty-dark-masternode");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

*[cssClass="img-empty-transactions"] {
    qproperty-icon: url("://img-empty-dark-transactions");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

*[cssClass="img-empty-peers"] {
    qproperty-icon: url("://img-empty-dark-peers");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

*[cssClass="img-empty-contacts"] {
    qproperty-icon: url("://img-empty-dark-contacts");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}


*[cssClass="img-empty-error"] {
    qproperty-icon: url("://img-empty-dark-error");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

*[cssClass="img-empty-multisend"] {
    qproperty-icon: url("://img-empty-dark-multisend");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

*[cssClass="img-empty-staking-on"] {
    qproperty-icon: url("://img-empty-dark-staking-on");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}


*[cssClass="img-empty-staking-off"] {
    qproperty-icon: url("://img-empty-dark-staking-off");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}


*[cssClass="img-empty-privacy"] {
    qproperty-icon: url("://img-empty-dark-privacy");
    qproperty-iconSize: 100px 100px;
    background-color: transparent;
}

/*HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
HH        TREE WIDGET
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH*/

#treeWidget {
    border:1px solid #5c4b7d;
    background-color:#FFFFFF;
    background-position:center;
    background-repeat:no-repeat;
    selection-background-color:#33b088ff;
    selection-color: white;
    font-size:14px;
    border-radius:0px;
    color: #707070;
}

#treeWidget::indicator:first:checked{
    image: url("://ic-check-active");
}
#treeWidget::indicator:middle:checked{
    image: url("://ic-check-active");
}

#treeWidget::indicator {
    width: 24px;
    height: 24px;
}

#treeWidget::indicator:indeterminate {
    image: url("://ic-check-box-indeterminate");
}

#treeWidget::indicator:unchecked {
    image: url("://ic-check-box");
}

#treeWidget::indicator:checked {
    image: url("://ic-check-active");
}

#treeWidget::item {
    border:none;
    border-bottom: 1px solid #bababa;
    border-radius:0px;
    color: #707070;
    padding-top: 6px;
    padding-bottom: 6px;
    background-color:rgba(255,255,255,100);
}

#treeWidget::branch:closed:has-children:!has-siblings {
    border-image: none;
    background-color:rgba(255,255,255,100);
    image: url("://ic-arrow-drop-up");
    border-bottom: 1px solid #bababa;
}

#treeWidget::branch:closed:has-children:has-siblings {
    border-image: none;
    background-color:rgba(255,255,255,100);
    image: url("://ic-arrow-drop-up");
    border-bottom: 1px solid #bababa;
}


#treeWidget::branch:open:has-children:!has-siblings,
#treeWidget::branch:open:has-children:has-siblings {
    border-image: none;
    image: url("://ic-arrow-drop-down");
    border-bottom: 1px solid #bababa;
}

#treeWidget::item:hover {
    border:none;
    border-bottom: 1px solid #bababa;
    border-radius:0px;
    color: #707070;
    background-color:#26bababa;
}

#treeWidget::item:selected {
    border:none;
    border-bottom: 1px solid #bababa;
    border-radius:0px;
    color: #707070;
    background-color:#33b088ff;
}


#treeWidget::item:hover:selected {
    border:none;
    border-bottom: 1px solid #bababa;
    border-radius:0px;
    color: #707070;
    background-color:#33b088ff;
}


#treeWidget::branch {
    background-color: #FFFFFF;
    selection-background-color:#33b088ff;
}

#treeWidget::branch:selected {
    background-color:#33b088ff;
}

#treeWidget::branch:!selected {
    background-color:#33b088ff;
}

#treeWidget::branch:hover {
    background-color:#26bababa;
}

#treeWidget::branch:!has-children {
    background-color: #FFFFFF;
}

QHeaderView::section {
    background-color: #5c4b7d;
    color: #FFFFFF;
    padding-top: 6px;
    padding-bottom: 6px;
    font-size:14px;
    border:0px solid #5c4b7d;
}
/* ... */

